--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,6 +54,10 @@
 }
 
 
+.skill-span {
+    @apply inline-block px-2 py-1 rounded-md bg-gray-200 text-gray-600 text-sm font-semibold;
+}
+
 
 // * {
 //     outline: 1px solid rgba(blue, $alpha: 0.2);
