Add new entry to clubs

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -168,6 +168,20 @@ import Skills from "../components/Skills.astro"
         />
         <ExperienceCard
           timeline=""
+          position="Backend Developer • Excel MEC"
+          about="I work on various projects and services for the annual techno-managerial fest of the college."
+          link="https://www.excelmec.org/"
+          tags={[
+            "AWS",
+            "SES",
+            "PostgreSQL",
+            "Docker",
+            "Sys Admin",
+            "Express.js",
+          ]}
+        />
+        <ExperienceCard
+          timeline=""
           position="Full Stack Developer • MACS MEC"
           about="I work on various projects and services for the CS department and the college."
           link="https://cs.mec.ac.in/"
