--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro"
-import ExperienceCard from "../components/ExperienceCard.astro"
-import ProjectCard from "../components/ProjectCard.astro"
-import Footer from "../components/Footer.astro"
-import Skills from "../components/Skills.astro"
+import Layout from "../layouts/Layout.astro";
+import ExperienceCard from "../components/ExperienceCard.astro";
+import ProjectCard from "../components/ProjectCard.astro";
+import Footer from "../components/Footer.astro";
+import Skills from "../components/Skills.astro";
 ---
 
 <Layout title="Allen Shibu | Computer Science Student | Full-Stack Developer">
@@ -62,14 +62,14 @@ import Skills from "../components/Skills.astro"
             </svg>
           </a>
         </li>
-        <li>
+        <!-- <li>
           <button
             class="bg-sky-400/20 text-sky-400 hover:bg-sky-400/40 font-medium tracking-wide py-2 px-4 rounded"
           >
             <a href="/assets/files/Resume.pdf" target="_blank">Resume</a
             ></button
           >
-        </li>
+        </li> -->
       </ul>
     </div>
 
@@ -209,6 +209,6 @@ import Skills from "../components/Skills.astro"
 
 <script>
   document.getElementById("email").addEventListener("click", () => {
-    navigator.clipboard.writeText("allenshibu@outlook.in")
-  })
+    navigator.clipboard.writeText("allenshibu@outlook.in");
+  });
 </script>
