--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,19 +1,20 @@
 ---
-import Image from "astro/components/Image.astro"
+import Image from "astro/components/Image.astro";
 
 interface Props {
-  image: string
-  title: string
-  about: string
-  link: string
-  tags: Array<string>
+  image: string;
+  title: string;
+  about: string;
+  link: string;
+  tags: Array<string>;
 }
 
-const { image, title, about, link, tags } = Astro.props
+const { image, title, about, link, tags } = Astro.props;
 ---
 
 <div
   class="w-full p-6 rounded-md flex flex-col lg:flex-row justify-center items-start gap-6 hover:bg-sky-100/10"
+  onclick="window.open('{link}')"
 >
   <div
     class="w-32 lg:w-72 text-neutral-500 uppercase font-semibold tracking-wide text-xs order-last lg:order-first ring-1 hover:ring-2"
