Add internship experience

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,9 +86,16 @@ import Skills from "../components/Skills.astro";
       </div>
       <div class="w-full flex flex-col justify-center items-center gap-4">
         <ExperienceCard
+          timeline="2024 Jul - Ongoing"
+          position="Product Engineering Intern • CareStack"
+          about="Working on a learning solution for the application."
+          link="https://carestack.com/"
+          tags={["python", "RAG", "Azure OpenAI"]}
+        />
+        <ExperienceCard
           timeline="2023 Jun - 2023 Aug"
           position="Backend Developer Intern • 1Living"
-          about="Working on the backend service for the app including image storage using S3 buckets."
+          about="Worked on the backend service for the app including image storage using S3 buckets."
           link="https://1living.in/"
           tags={["Express.js", "MongoDB", "S3"]}
         />
