End carestack and add resume

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,14 +62,14 @@ import Skills from "../components/Skills.astro";
             </svg>
           </a>
         </li>
-        <!-- <li>
+        <li>
           <button
             class="bg-sky-400/20 text-sky-400 hover:bg-sky-400/40 font-medium tracking-wide py-2 px-4 rounded"
           >
-            <a href="/assets/files/Resume.pdf" target="_blank">Resume</a
+            <a href="http://resume.allenshibu.com" target="_blank">Resume</a
             ></button
           >
-        </li> -->
+        </li>
       </ul>
     </div>
 
@@ -86,7 +86,7 @@ import Skills from "../components/Skills.astro";
       </div>
       <div class="w-full flex flex-col justify-center items-center gap-4">
         <ExperienceCard
-          timeline="2024 Jul - Ongoing"
+          timeline="2024 Jul - 2024 Dec"
           position="Product Engineering Intern • CareStack"
           about="Working on a learning solution for the application."
           link="https://carestack.com/"
